--- a/index.html
+++ b/index.html
@@ -35,26 +35,25 @@
 		  center: new google.maps.LatLng(22, 114),
 		  population: 3857799
 		};
-		citymap['manila'] = {
+		citymap['Manila'] = {
 		  center: new google.maps.LatLng(14, 120),
 		  population: 3857799
 		};
-		citymap['melbourne'] = {
+		citymap['Melbourne'] = {
 		  center: new google.maps.LatLng(-37, 145),
 		  population: 3857799
 		};
-		citymap['djibouti'] = {
+		citymap['Djibouti'] = {
 		  center: new google.maps.LatLng(11, 43),
 		  population: 3857799
 		};
-		citymap['belgrad'] = {
+		citymap['Belgrad'] = {
 		  center: new google.maps.LatLng(44, 20),
 		  population: 3857799
 		};
 
 var cityCircle;
       function initialize() {
-      	// var styles = [{"featureType":"administrative","stylers":[{"visibility":"off"}]},{"featureType":"poi","stylers":[{"visibility":"simplified"}]},{"featureType":"road","elementType":"labels","stylers":[{"visibility":"simplified"}]},{"featureType":"water","stylers":[{"visibility":"simplified"}]},{"featureType":"transit","stylers":[{"visibility":"simplified"}]},{"featureType":"landscape","stylers":[{"visibility":"simplified"}]},{"featureType":"road.highway","stylers":[{"visibility":"off"}]},{"featureType":"road.local","stylers":[{"visibility":"on"}]},{"featureType":"road.highway","elementType":"geometry","stylers":[{"visibility":"on"}]},{"featureType":"water","stylers":[{"color":"#84afa3"},{"lightness":52}]},{"stylers":[{"saturation":-17},{"gamma":0.36}]},{"featureType":"transit.line","elementType":"geometry","stylers":[{"color":"#3f518c"}]}]
       	var styles = [{"featureType":"poi","elementType":"all","stylers":[{"hue":"#000000"},{"saturation":-100},{"lightness":-100},{"visibility":"off"}]},{"featureType":"poi","elementType":"all","stylers":[{"hue":"#000000"},{"saturation":-100},{"lightness":-100},{"visibility":"off"}]},{"featureType":"administrative","elementType":"all","stylers":[{"hue":"#000000"},{"saturation":0},{"lightness":-100},{"visibility":"off"}]},{"featureType":"road","elementType":"labels","stylers":[{"hue":"#ffffff"},{"saturation":-100},{"lightness":100},{"visibility":"off"}]},{"featureType":"water","elementType":"labels","stylers":[{"hue":"#000000"},{"saturation":-100},{"lightness":-100},{"visibility":"off"}]},{"featureType":"road.local","elementType":"all","stylers":[{"hue":"#ffffff"},{"saturation":-100},{"lightness":100},{"visibility":"on"}]},{"featureType":"water","elementType":"geometry","stylers":[{"hue":"#ffffff"},{"saturation":-100},{"lightness":100},{"visibility":"on"}]},{"featureType":"transit","elementType":"labels","stylers":[{"hue":"#000000"},{"saturation":0},{"lightness":-100},{"visibility":"off"}]},{"featureType":"landscape","elementType":"labels","stylers":[{"hue":"#000000"},{"saturation":-100},{"lightness":-100},{"visibility":"off"}]},{"featureType":"road","elementType":"geometry","stylers":[{"hue":"#bbbbbb"},{"saturation":-100},{"lightness":26},{"visibility":"on"}]},{"featureType":"landscape","elementType":"geometry","stylers":[{"hue":"#dddddd"},{"saturation":-100},{"lightness":-3},{"visibility":"on"}]}]
 
       	var styledMap = new google.maps.StyledMapType(styles,
@@ -65,25 +64,40 @@ var cityCircle;
         var mapOptions = {
 			center: new google.maps.LatLng(27, 0),
 			zoom: 2,
-          	panControl: false,
-    		zoomControl: true,
-    		scaleControl: false,
-    		streetViewControl: false,
-    		overviewMapControl: false,
-    		mapTypeControl: false,
+      //     	panControl: false,
+    		// zoomControl: true,
+    		// scaleControl: false,
+    		// streetViewControl: false,
+    		// overviewMapControl: false,
+    		// mapTypeControl: true,
           	mapTypeId: google.maps.MapTypeId.ROADMAP
         };
+
         var map = new google.maps.Map(mapCanvas, mapOptions)
-        map.mapTypes.set('map_style', styledMap);
-  		map.setMapTypeId('map_style');
+	        map.mapTypes.set('map_style', styledMap);
+	  		map.setMapTypeId('map_style');
 
 
   		var clickhandler = function(city) {
   			return function() {
   				console.log('click!' + city);
-  				citysearch(city);
+  				randomize(city);
   			}
-	  	}
+	  	};
+
+	  	// var mouseoverhandler = function(cityCircle) {
+  		// 	return function() {
+  		// 		console.log('mouseover');
+  		// 		infowindow.open(map, cityCircle);
+  		// 	}
+	  	// };
+
+	  	var infowindow = new google.maps.InfoWindow({
+			content: contentString
+		});
+
+
+	  	var contentString = 'hejhejhejehej';
 
   		  // Construct the circle for each value in citymap.
 		  // Note: We scale the area of the circle based on the population.
@@ -95,40 +109,50 @@ var cityCircle;
 		      fillColor: '#4ed895',
 		      fillOpacity: 0.40,
 		      map: map,
+		      position: citymap[city].center,
 		      center: citymap[city].center,
 		      radius: Math.sqrt(citymap[city].population) * 200
 		    };
 		    // Add the circle for this city to the map.
 		    cityCircle = new google.maps.Circle(populationOptions);
+		    
 
 		    google.maps.event.addListener(cityCircle, 'click', clickhandler(city));
+		    google.maps.event.addListener(cityCircle, 'mouseover', function() {
+		    	console.log('mouseover');
+		    	infowindow.open(map, cityCircle);
+		    });
 		  }
 
       }
-
       google.maps.event.addDomListener(window, 'load', initialize);
-      
+
     </script>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 <script src="draw.js" ></script>
 <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
 <body>
+<div id="intro">
+<h1>Find out how much it costs to be tourist!</h1>
+</div>
 
- <div id="map-container">
+<div id="map-container">
  <div id="map-canvas"></div>
    </br></br>
- <div id="box">
+	<div id="box">
  <input type="text" id="input" onkeydown="search(this)" placeholder='How much per day in...'/>
  </div>
- </div>
+</div>
 
-<div id="text"></div>
-<div id="chart"></div>
+<div id="result">
+	<div id="text"></div>
+	<div id="chart"></div>
+</div>
+
 </br>
 
 
